2007-11-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed: compilation fails without c-ares/ares
	* src/DownloadEngine.cc (addCommand): Moved outside #ifdef

	Generate http/ftp commands only when download is incomplete.
	* src/BtFileAllocationEntry.cc (prepareForNextAction)

2007-11-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Corrected typo. Examples are removed since they are available in man
	page.
	* src/version_usage.cc

	Updated man page.
	* doc/aria2c.1
	* doc/aria2c.1.txt
	* doc/makeman: Commented out sed command.
	
2007-11-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Throw DlAbortEx when a remote file is not found.
	* src/HttpResponse.cc
	* src/FtpNegotiationCommand.cc
	* src/message.h

	Overwrite an existing file if --allow-overwrite=true is given.
	* src/RequestGroup.cc

	Removed unused functions
	* src/AbstractCommand.h
	
2007-11-23  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed 'extern' from 'extern typedef ...' in src/*.h

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated usage
	* src/version_usage.cc

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Trim announce URL
	* src/DefaultBtContext.cc
	* test/ShaVisitorTest.cc
	
	Trim argument s. Give trimed s to exception constructor.
	* src/Util.cc (parseInt)(parseLLInt)
	* test/UtilTest.cc

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Set precision back to 1.
	* src/ConsoleStatCalc.cc (calculateStat)

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Replaced strtol with Util::parseInt
	* src/ChunkedEncoding.cc
	* src/HttpConnection.cc
	* src/CookieBoxFactory.cc
	* src/ParameterizedStringParser.cc
	* src/Util.cc
	* test/UtilTest.cc
	* test/OptionHandlerTest.cc
	* src/Request.cc

	Throw exception when empty string is given. The message for exception
	changed.
	* src/Util.cc (parseInt)(parseLLInt)
	* src/message.h

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
